# visual-html-editor

./: .gitignore  Dockerfile  Makefile  README.md  build.js  index.html  package-lock.json  package.json  pyproject.toml  start-server.js
.github/workflows/: ci.yml
docs/: architecture.md
examples/: sample-usage.md
scripts/: setup.sh
src/: app.css  app.js  main.py
src/utils/: helpers.ts
tests/integration/: test_api.py
tests/unit/: test_main.py
