[tool.poetry]
name = "multi-file-repo"
version = "0.1.0"
description = "A multi-file repository for a Python and TypeScript application."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
# Add your Python dependencies here
# e.g. requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"